<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>topparent</artifactId>
		<groupId>es.capape</groupId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<groupId>es.capape.sports</groupId>
	<artifactId>team-manager</artifactId>
	<packaging>pom</packaging>

	<name>Team Manager</name>
	<url>http://www.capape.es</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>4.2.8.RELEASE</spring.version>
		<junit.version>4.12</junit.version>
		<mockito.version>1.10.19</mockito.version>
		<jackson.version>2.7.0</jackson.version>
		<servlet-api.version>2.4</servlet-api.version>
		<jsp-api.version>2.0</jsp-api.version>
		<jstl.version>1.2</jstl.version>
		<taglibs.standard.version>1.1.2</taglibs.standard.version>
		<javaee-web-api.version>7.0</javaee-web-api.version>
		<hibernate.version>5.1.2.Final</hibernate.version>
		<hibernate.jpa.2.1.version>1.0.0.Final</hibernate.jpa.2.1.version>
		<hsqldb.version>2.3.4</hsqldb.version>
		<spring.data.version>1.10.5.RELEASE</spring.data.version>
		<jetty-maven.version>9.2.9.v20150224</jetty-maven.version>

		<plugin.docker.version>0.15.16</plugin.docker.version>
  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		 <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlets</artifactId>
        <version>${jetty-maven.version}</version>
        <scope>test</scope>
    </dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${jetty-maven.version}</version>
				<configuration>
					<jvmArgs>-XX:PermSize=512M -XX:MaxPermSize=1024M
						-Xmx2048m
						-Xms2048m</jvmArgs>
					<httpConnector>
						<port>9090</port>
					</httpConnector>
					<webApp>
						<contextPath>/websports</contextPath>
					</webApp>
					<scanIntervalSeconds>5</scanIntervalSeconds>

            	</configuration>

            </plugin>

			<!-- generate source packages -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- generate javadoc packages -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4.1</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<configuration>
							<rules>
								<dependencyConvergence />
								<reactorModuleConvergence />
								<requireReleaseDeps>
									<onlyWhenRelease>true</onlyWhenRelease>
								</requireReleaseDeps>
							</rules>
						</configuration>
						<goals>
							<goal>enforce</goal>
						</goals>

					</execution>
				</executions>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>${plugin.docker.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>persistence</module>
		<module>model</module>
		<module>service</module>
		<module>controllers</module>
		<module>websports</module>
		<module>docker-image</module>
	</modules>
	<description>Personal project whose goal is to provide a management platform to amateur sport teams.</description>
</project>